--- a/index.html
+++ b/index.html
@@ -4,37 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Suavecitos</title>
+    <meta name="keyboards" content="tejido, lana, manufactura, niños, hogar, ropa, abrigo, vestimenta">
+    <meta name="description" content="Diseños exclusivos, a gusto tuyo, tejidos de lana, pensados para los más pequeños y para el hogar.">
+    <title>Suavecitos - Tejidos para niños y el hogar</title>
     <link rel="shortcut icon" href="./images/tejido-de-punto.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;1,100&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/estilos.css">
 </head>
 <body>
-    <header class="header">
-        <audio src="./images/la-Vie-En-Rose.mp3" autoplay="autoplay" loop="loop"></audio>
-        <a class="Logo" href="./index.html"><img src="./images/tejido-de-punto.png"></a>
-        <nav class="Navegadores">
-            <ul>
-                <li><a href="./pages/nosotros.html">CONOCENOS</a>
-                    <ul>
-                        <li><a href="./pages/nosotros.html">Conoceme</a></li>
-                    </ul>   
-                </li>                         
-                <li><a href="./pages/para-ninos.html">Para peques</a></li>
-                <li><a href="./pages/para-el-hogar.html">Para casita</a></li>
-                <li><a href="./pages/contacto.html">Contacto</a></li>
-            </ul>
-        </nav>
-    </header>
-    <main>
-        <div class="Titulo" data-aos="flip-left" data-aos-easing="ease-out-cubic" data-aos-duration="2000">
-          <h1>SUA<strong>vecito</strong>S</h1>  
-          <h5>Pensado para los más chiquitos... pensado para el hogar.</h5>
-        </div>
+  <audio src="./music/saxophone.mp3" autoplay="autoplay" loop="loop"></audio>
+  <header>
         <div id="carouselSlidesOnly" class="carousel slide" data-bs-ride="carousel">
           <div class="carousel-inner">
             <div class="carousel-item active">
@@ -47,41 +31,59 @@
               <img src="./images/3-baby.jpg" class="d-block w-100" alt="3-baby">
             </div>
             <div class="carousel-item">
-                <img src="./images/4-home.jpg" class="d-block w-100" alt="4-home">
-              </div>
-            <div class="carousel-item">
-                  <img src="./images/5-baby.jpg" class="d-block w-100" alt="5-baby">
-                </div>
-            <div class="carousel-item">
-                    <img src="./images/6-home.jpg" class="d-block w-100" alt="6-home">         
+              <img src="./images/4-home.jpg" class="d-block w-100" alt="4-home">
             </div>
-          </div>
-        </div>        <div class="Principal" data-aos="zoom-out-up">
-          <img src="./images/intro.jpg" alt="Intro">
-          <p>Buen gusto, calidad, diseños exclusivos... 3 pautas que nos definen y diferencian. Porque nuestros peques merecen
-          lo mejor, estar abrigaditos y, por qué no? a la moda. Pero no nos olvidemos de nuestro hogar... esos pequeños detalles
-          que lo hacen único y especial; para nuestro rincón favorito, para el dormitorio, para la mesa... para donde vos quieras.
-          Te invitamos a recorrer un camino único y especial donde los tejidos de lana serán los protagonistas de tu vida. Un camino
-          pensado a TU GUSTO. <strong>¡CONOCENOS!</strong></p>
+            <div class="carousel-item">
+              <img src="./images/5-baby.jpg" class="d-block w-100" alt="5-baby">
+            </div>
+            <div class="carousel-item">
+              <img src="./images/6-home.jpg" class="d-block w-100" alt="6-home">         
+            </div>
+          </div>  
+        </div>
+        <div class="Titulo" data-aos="flip-left" data-aos-easing="ease-out-cubic" data-aos-duration="2000">
+          <h1><strong>SUAVECITOS</strong></h1>  
+          <h3>Pensado para los más chiquitos... pensado para el hogar.</h3>
+        </div>     
+        <div class="navBar" data-aos="zoom-out-up">
+          <a class="Logo" href="./index.html"><img src="./images/tejido-de-punto.png"></a>
+          <nav class="Navegadores">
+            <ul>
+              <li><a href="./pages/nosotros.html">Nosotros</a></li>                         
+              <li><a href="./pages/para-ninos.html">Infantes</a></li>
+              <li><a href="./pages/para-el-hogar.html">Deco Hogar</a></li>
+              <li><a href="./pages/contacto.html">Contacto</a></li>
+            </ul>
+          </nav>
+        </div> 
+        <div class="Titulo2" data-aos="zoom-out-up">
+          <p>Buen gusto, calidad, diseños exclusivos... 3 pautas que nos definen y diferencian. Porque nuestros peques merecen lo mejor, estar abrigaditos y, por qué no? a la moda. Pero no nos olvidemos de nuestro hogar... esos pequeños detalles que lo hacen único y especial; para nuestro rincón favorito, para el dormitorio, para la mesa... para donde vos quieras.
+          Te invitamos a recorrer un camino único y especial donde los tejidos de lana serán los protagonistas de tu vida. Un camino pensado a TU GUSTO. <strong>¡CONOCENOS Y DEJANOS CONOCERTE!</strong></p>
+        </div>
+        <div class="Principal" data-aos="zoom-out-up">
+          <p>SUAVECITOS es un emprendimiento textil destinado a niños y niñas y el hogar. Realizamos prendas básicas desde 0 a 3 años y artículos deco. La producción se compone en su mayoría por prendas tejidas y se complementa con tela arpillera, en el caso de la producción para casa. Teniendo presente la calidad de diseño en un marco de economía circular y consumo consiente</p>
+          <img src="./images/main1.jpg" alt="Main1">
+          <img src="./images/main2.jpg" alt="Main2">
+          <p>Nuestras ediciones son exclusivas y se conciben en formato "capsula". Trabajamos bajo normas de comercio justo y consumo responsable. Si te interesa recibir nuestras novedades suscribite a nuestro newsletter así establecemos lazos. Esperamos poder tender nuevas redes!</p>
         </div>
         <div class="Whatsapp" data-aos="zoom-out-up">
           <a href="https://api.whatsapp.com/send?phone=542615936269"><img src="./images/whatsapp.png" alt="Whatsapp"></a>
         </div>
-    </main>    
+  </header>
     <Footer class="Pie">
-          <p>Podés pagar tus productos SUA<strong>vecito</strong>S con estos medios:</p>
-        <div>
-            <img src="./images/visa.png" alt="Visa">
-            <img src="./images/masterCard.png" alt="Master">
-            <img src="./images/amex.png" alt="Amex">
-            <img src="./images/mP.png" alt="MP">
-        </div>
-          <p>2022 - Suavecitos by Mariela - &copy; Todos los derechos reservados</p>
+      <p>Podés pagar tus productos <strong>SUAVECITOS</strong> con estos medios:</p>
+      <div>
+        <img src="./images/visa.png" alt="Visa">
+        <img src="./images/masterCard.png" alt="Master">
+        <img src="./images/amex.png" alt="Amex">
+        <img src="./images/mP.png" alt="MP">
+      </div>
+      <p>2022 - Suavecitos by Mariela - &copy; Todos los derechos reservados</p>
     </Footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <script>
-    AOS.init();
-    </script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
+<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+<script>
+AOS.init();
+</script>
 </body>
 </html>
