--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -4,49 +4,47 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nosotros</title>
+    <meta name="keyboards" content="diseños, exclusivo, bisabuela, tejido, bienestar, newsletter, historia, vida">
+    <meta name="description" content="Diseños exclusivos, a gusto tuyo, tejidos de lana, pensados para los más pequeños y para el hogar.">
+    <title>Nosotros - Suavecitos Tejidos</title>
     <link rel="shortcut icon" href="../images/tejido-de-punto.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;1,100&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/estilos.css">
 </head>
 <body>
-    <header class="header">
-        <audio src="./images/la-Vie-En-Rose.mp3" autoplay="autoplay" loop="loop"></audio>
-        <a class="Logo" href="../index.html"><img src="../images/tejido-de-punto.png"></a>
-        <nav class="Navegadores">
-            <ul>
-                <li><a href="../pages/nosotros.html">CONOCENOS</a>
-                    <ul>
-                        <li><a href="../pages/nosotros.html">Conoceme</a></li>
-                    </ul>   
-                </li>                         
-                <li><a href="../pages/para-ninos.html">Para peques</a></li>
-                <li><a href="../pages/para-el-hogar.html">Para casita</a></li>
-                <li><a href="../pages/contacto.html">Contacto</a></li>
-            </ul>
-        </nav>
+    <audio src="../music/saxophone.mp3" autoplay="autoplay" loop="loop"></audio>
+    <header>
+        <div class="navBar2">
+            <a class="Logo" href="../index.html"><img src="../images/tejido-de-punto.png"></a>
+            <nav class="Navegadores">
+                <ul>
+                    <li><a href="../pages/nosotros.html">Nosotros</a></li>                         
+                    <li><a href="../pages/para-ninos.html">Infantes</a></li>
+                    <li><a href="../pages/para-el-hogar.html">Deco Hogar</a></li>
+                    <li><a href="../pages/contacto.html">Contacto</a></li>
+                </ul>
+            </nav>
+        </div>
     </header>
     <main>
         <div class="Central" data-aos="zoom-out-up">
-            <p>Apasadionada por la creación, amante de lo simple y delicado... Así podría empezar describiéndome.
-            De profesión Sommelier, cuando tuve la suerte de viajar por el mundo conocí diferentes culturas que me inspiraron a hacer algo diferente. Desde pequeña empecé a tejer gracias a la enseñanza de mi bisabuela. Horas y horas de trabajo destinado a familiares y amigos. Pero cuando llegaron mis 2 hijos al mundo me di cuenta de que era el momento de ofrecer mis creaciones para todo aquel que las quisiera. Por eso proyectamos y lanzamos SUA<strong>vecito</strong>S... destinado a los más pequeños de la casa... pero también ofrezco un mimito a los sectores destacados del hogar. Gracias por interesarte, por querer conocer mis creaciones. Estoy para resolver tus inquietudes, para fabricar lo que vos quieras o necesités, completamente a gusto, para tu exclusividad.</p>
+            <p>Apasadionada por la creación, amante de lo simple y delicado... Así podría empezar describiéndose la creadora de SUAVECITOS, Mariela. De profesión Sommelier, cuando tuvo la suerte de viajar por el mundo conoció diferentes culturas que la inspiraron a hacer algo diferente. Desde pequeña empezó a tejer gracias a la enseñanza de su bisabuela. Horas y horas de trabajo destinado a familiares y amigos. Pero cuando llegaron sus 2 hijos al mundo se dio cuenta de que era el momento de ofrecer sus creaciones para todo aquel que las quisiera. Por eso proyectamos y lanzamos <strong>SUAVECITOS</strong>... destinado a los más pequeños de la casa... pero también ofreciendo un mimito a los sectores destacados del hogar. Gracias por interesarte, por querer conocer nuestras creaciones. Estamos para resolver tus inquietudes, para fabricar lo que vos quieras o necesités, completamente a gusto, para tu exclusividad.</p>
             <img src="../images/mari.jpg" alt="Mari" class="img-thumbnail">
         </div>
-
-        <div class="Central" data-aos="zoom-out-up">
+        <div class="Central2" data-aos="zoom-out-up">
             <img src="../images/manos.jpg" alt="Manos" class="img-thumbnail">
             <p>¿Sabías qué saludable es aprender a tejer desde chicos? Uno de los beneficios más importantes en los niños es la notable mejora de las habilidades motoras, particularmente la psicomotricidad fina y por otro lado la coordinación óculo-mano. Ayuda a estar concentrado en el presente y tener su atención enfocada en no perder los puntos y entrelazar el hilo correctamente, es una actividad que con el tiempo se convierte en un reto personal. Enseña a los más pequeños a perseguir una meta, que es un aspecto fundamental en la vida, además demuestra que el camino para conseguir un objetivo puede ser una tarea entretenida y divertida. Es bueno para las matemáticas, mejora la creatividad... <strong>¡ENTRE MUCHAS OTRAS RAZONES MÁS!</strong></p>
         </div>
-
         <div class="Subtitulo">
-            <h2>EL TEJIDO ES ALGO MUY IMPORTANTE ES NUESTRA VIDA</h2>
-            <h3>Mirá el siguiente video</h3>
+            <h2>LA IMPORTANCIA DEL TEJIDO EN NUESTRAS VIDAS</h2>
+            <h3>Mirá el siguiente video y conocé el fundamento de este título:</h3>
         </div>
-            <div class="Video"  data-aos="zoom-out-up">
+        <div class="Video"  data-aos="zoom-out-up">
             <iframe width="663" height="373" src="https://www.youtube.com/embed/uJaCqGa_O7k" title="Beneficios del tejido en nuestra salud y bienestar" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
         <div class="Suscribite">
@@ -66,19 +64,19 @@
         </div>
     </main>
     <Footer class="Pie">
-            <p>Podés pagar tus productos SUA<strong>vecito</strong>S con estos medios:</p>
+        <p>Podés pagar tus productos <strong>SUAVECITOS</strong> con estos medios:</p>
         <div>
             <img src="../images/visa.png" alt="Visa">
             <img src="../images/masterCard.png" alt="Master">
             <img src="../images/amex.png" alt="Amex">
             <img src="../images/mP.png" alt="MP">
         </div>
-            <p>2022 - Suavecitos by Mariela - &copy; Todos los derechos reservados</p>
+        <p>2022 - Suavecitos by Mariela - &copy; Todos los derechos reservados</p>
     </Footer>         
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <script>
-    AOS.init();
-    </script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
+<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+<script>
+AOS.init();
+</script>
 </body>
 </html>
