--- a/pages/para-ninos.html
+++ b/pages/para-ninos.html
@@ -4,35 +4,36 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ninos</title>
+    <meta name="keyboards" content="tejido, lana, manufactura, niños, ropa, abrigo, vestimenta, peques">
+    <meta name="description" content="Diseños exclusivos, a gusto tuyo, tejidos de lana, pensados para los más pequeños y para el hogar.">
+    <title>Ninos - Suavecitos Tejidos</title>
     <link rel="shortcut icon" href="../images/tejido-de-punto.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;1,100&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/estilos.css">
 </head>
 <body>
-    <header class="header">
-        <audio src="./images/la-Vie-En-Rose.mp3" autoplay="autoplay" loop="loop"></audio>
-        <a class="Logo" href="../index.html"><img src="../images/tejido-de-punto.png"></a>
-        <nav class="Navegadores">
-            <ul>
-                <li><a href="../pages/nosotros.html">CONOCENOS</a>
-                    <ul>
-                        <li><a href="../pages/nosotros.html">Conoceme</a></li>
-                    </ul>   
-                </li>                         
-                <li><a href="../pages/para-ninos.html">Para peques</a></li>
-                <li><a href="../pages/para-el-hogar.html">Para casita</a></li>
-                <li><a href="../pages/contacto.html">Contacto</a></li>
-            </ul>
-        </nav>
+    <audio src="../music/saxophone.mp3" autoplay="autoplay" loop="loop"></audio>
+    <header>
+        <div class="navBar2">
+            <a class="Logo" href="../index.html"><img src="../images/tejido-de-punto.png"></a>
+            <nav class="Navegadores">
+                <ul>
+                    <li><a href="../pages/nosotros.html">Nosotros</a></li>                         
+                    <li><a href="../pages/para-ninos.html">Infantes</a></li>
+                    <li><a href="../pages/para-el-hogar.html">Deco Hogar</a></li>
+                    <li><a href="../pages/contacto.html">Contacto</a></li>
+                </ul>
+            </nav>
+        </div>
     </header>
     <main>
         <div class="Categorias" data-aos="zoom-out-up">
-            <p>Sé cuánto te gusta cuidarlos, abrigarlos, vestirlos bien; para eso nada mejor que un tejido de calidad y realizado correctamente. Cada prenda es única y exclusiva, confeccionada a medida.</p>
+            <p>Sabemos cuánto te gusta cuidarlos, abrigarlos, vestirlos bien; para eso nada mejor que un tejido de calidad y realizado correctamente. Cada prenda es única y exclusiva, confeccionada a medida.</p>
             <ul>
                 <li>Gorritos</li>
                 <li>Camperitas</li>
@@ -124,20 +125,20 @@
             <a href="https://api.whatsapp.com/send?phone=542615936269"><img src="../images/whatsapp.png" alt="Whatsapp"></a>
         </div>
     </main>
-         <Footer class="Pie">
-            <p>Podés pagar tus productos SUA<strong>vecito</strong>S con estos medios:</p>
+    <Footer class="Pie">
+        <p>Podés pagar tus productos <strong>SUAVECITOS</strong> con estos medios:</p>
         <div>
             <img src="../images/visa.png" alt="Visa">
             <img src="../images/masterCard.png" alt="Master">
             <img src="../images/amex.png" alt="Amex">
             <img src="../images/mP.png" alt="MP">
         </div>
-            <p>2022 - Suavecitos by Mariela - &copy; Todos los derechos reservados</p>
+        <p>2022 - Suavecitos by Mariela - &copy; Todos los derechos reservados</p>
     </Footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <script>
-    AOS.init();
-    </script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
+<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+<script>
+AOS.init();
+</script>
 </body>
 </html>
