--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -4,43 +4,42 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contacto</title>
+    <meta name="keyboards" content="tejido, lana, manufactura, contacto, registro, ubicación, mendoza, Argentina">
+    <meta name="description" content="Diseños exclusivos, a gusto tuyo, tejidos de lana, pensados para los más pequeños y para el hogar.">
+    <title>Contacto - Suavecitos Tejidos</title>
     <link rel="shortcut icon" href="../images/tejido-de-punto.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;1,100&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/estilos.css">
 </head>
 <body>
-    <header class="header">
-        <audio src="./images/la-Vie-En-Rose.mp3" autoplay="autoplay" loop="loop"></audio>
-        <a class="Logo" href="../index.html"><img src="../images/tejido-de-punto.png"></a>
-        <nav class="Navegadores">
-            <ul>
-                <li><a href="../pages/nosotros.html">CONOCENOS</a>
-                    <ul>
-                        <li><a href="../pages/nosotros.html">Conoceme</a></li>
-                    </ul>   
-                </li>                         
-                <li><a href="../pages/para-ninos.html">Para peques</a></li>
-                <li><a href="../pages/para-el-hogar.html">Para casita</a></li>
-                <li><a href="../pages/contacto.html">Contacto</a></li>
-            </ul>
-        </nav>
+    <audio src="../music/saxophone.mp3" autoplay="autoplay" loop="loop"></audio>
+    <header>
+        <div class="navBar2">
+            <a class="Logo" href="../index.html"><img src="../images/tejido-de-punto.png"></a>
+            <nav class="Navegadores">
+                <ul>
+                    <li><a href="../pages/nosotros.html">Nosotros</a></li>                         
+                    <li><a href="../pages/para-ninos.html">Infantes</a></li>
+                    <li><a href="../pages/para-el-hogar.html">Deco Hogar</a></li>
+                    <li><a href="../pages/contacto.html">Contacto</a></li>
+                </ul>
+            </nav>
+        </div>
     </header>
     <main>
-        <div class="Central" data-aos="zoom-out-up">
-            <p>Escribinos, llamanos, lo que vos prefieras. Estamos para asesorarte y atender tus necesidades.
-            Recordá que somos fabricantes y podemos confeccionar a gusto y en exclusividad tu pedido. Nuevamente
-            <strong>GRACIAS </strong>por visitarnos. Sigamos recorriendo juntos el mundo de lo delicado, tierno
-            y SUA<strong>vecito</strong>.</p>
+        <div class="Titulo3" data-aos="zoom-out-up">
+            <p>Escribinos, llamanos, lo que vos prefieras. Estamos para asesorarte y atender tus inquietudes. Recordá que somos fabricantes y podemos confeccionar a gusto y en exclusividad tu pedido. Nuevamente <strong>GRACIAS</strong> por visitarnos. Sigamos recorriendo juntos el mundo de lo delicado y tierno... y nunca dejemos de lado nuestros anhelos más <strong>SUAVECITOS</strong>.</p>
         </div>
         <div class="Cafecito">
             <img src="../images/portada.jpg" alt="Cafe" class="img-thumbnail">
         </div>
         <div class="Contacto" data-aos="zoom-out-up">
+            <h2>Dejanos tus datos y nos pondremos en contacto</h2>
             <form action="enviar.php" method="get">
             <fieldset>
                 <label for="multi"></label>    
@@ -65,8 +64,7 @@
             </fieldset>
         </div>
         <div class="Ubicacion" data-aos="zoom-out-up">
-            <H5>Estamos ubicados en Godoy Cruz, Mendoza, Argentina. Hacemos envíos a todo el país, por el medio
-            que prefieras. Y si sos del exterior, ¡también te lo podemos enviar!</H5>
+            <H5>Estamos ubicados en Godoy Cruz, Mendoza, Argentina. Hacemos envíos a todo el país, por el medio que prefieras. Y si sos del exterior, ¡también te lo podemos enviar!</H5>
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d26790.731895952853!2d-68.86720586586507!3d-32.92878600820306!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x967e095dea6a01e7%3A0x90fb57ac5758c337!2sGodoy%20Cruz%2C%20Mendoza!5e0!3m2!1ses!2sar!4v1666839178775!5m2!1ses!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
     </main>
@@ -74,19 +72,19 @@
         <a href="https://api.whatsapp.com/send?phone=542615936269"><img src="../images/whatsapp.png" alt="Whatsapp"></a>
     </div>
     <Footer class="Pie">
-            <p>Podés pagar tus productos SUA<strong>vecito</strong>S con estos medios:</p>
+        <p>Podés pagar tus productos <strong>SUAVECITOS</strong> con estos medios:</p>
         <div>
             <img src="../images/visa.png" alt="Visa">
             <img src="../images/masterCard.png" alt="Master">
             <img src="../images/amex.png" alt="Amex">
             <img src="../images/mP.png" alt="MP">
         </div>
-            <p>2022 - Suavecitos by Mariela - &copy; Todos los derechos reservados</p>
+        <p>2022 - Suavecitos by Mariela - &copy; Todos los derechos reservados</p>
     </Footer>    
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <script>
-    AOS.init();
-    </script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
+<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+<script>
+AOS.init();
+</script>
 </body>
 </html>
