--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;1,100&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./sass/main.css">
 </head>
 <body>
-  <audio src="./music/saxophone.mp3" autoplay="autoplay" loop="loop"></audio>
+  <audio src="./music/positive-cartoon.mp3" autoplay="autoplay" loop="loop"></audio>
   <header>
         <div id="carouselSlidesOnly" class="carousel slide" data-bs-ride="carousel">
           <div class="carousel-inner">
@@ -40,7 +40,7 @@
             </div>
           </div>  
         </div>
-        <div class="Titulo" data-aos="flip-left" data-aos-easing="ease-out-cubic" data-aos-duration="2000">
+        <div class="Titulo" data-aos="flip-left" data-aos-easing="ease-out-cubic" data-aos-duration="3000">
           <h1><strong>SUAVECITOS</strong></h1>  
           <h3>Pensado para los más chiquitos... pensado para el hogar.</h3>
         </div>     
@@ -56,14 +56,16 @@
           </nav>
         </div> 
         <div class="Titulo2" data-aos="zoom-out-up">
+          <h2><strong>LLEGAMOS PARA ACOMPAÑARTE EN TU DÍA A DÍA</strong></h2>
           <p>Buen gusto, calidad, diseños exclusivos... 3 pautas que nos definen y diferencian. Porque nuestros peques merecen lo mejor, estar abrigaditos y, por qué no? a la moda. Pero no nos olvidemos de nuestro hogar... esos pequeños detalles que lo hacen único y especial; para nuestro rincón favorito, para el dormitorio, para la mesa... para donde vos quieras.
-          Te invitamos a recorrer un camino único y especial donde los tejidos de lana serán los protagonistas de tu vida. Un camino pensado a TU GUSTO. <strong>¡CONOCENOS Y DEJANOS CONOCERTE!</strong></p>
+          Te invitamos a recorrer un camino único y especial donde los tejidos de lana serán los protagonistas de tu vida. Un camino pensado a TU GUSTO.</p>
+          <h3><strong>¡CONOCENOS Y DEJANOS CONOCERTE!</strong></h3>
         </div>
         <div class="Principal" data-aos="zoom-out-up">
-          <p>SUAVECITOS es un emprendimiento textil destinado a niños y niñas y el hogar. Realizamos prendas básicas desde 0 a 3 años y artículos deco. La producción se compone en su mayoría por prendas tejidas y se complementa con tela arpillera, en el caso de la producción para casa. Teniendo presente la calidad de diseño en un marco de economía circular y consumo consiente</p>
+          <p>SUAVECITOS es un emprendimiento textil destinado a niños, niñas y el hogar. Realizamos prendas básicas desde 0 a 3 años y artículos deco. La producción se compone en su mayoría por prendas tejidas y se complementa con tela arpillera, en el caso de la producción para casa. Teniendo siempre presente la calidad de diseño en un marco de economía circular y consumo consiente</p>
           <img src="./images/main1.jpg" alt="Main1">
           <img src="./images/main2.jpg" alt="Main2">
-          <p>Nuestras ediciones son exclusivas y se conciben en formato "capsula". Trabajamos bajo normas de comercio justo y consumo responsable. Si te interesa recibir nuestras novedades suscribite a nuestro newsletter así establecemos lazos. Esperamos poder tender nuevas redes!</p>
+          <p>Nuestras ediciones son exclusivas y se conciben en formato "capsula" (diseñadas en conjunto con el comprador). Trabajamos bajo normas de comercio justo y consumo responsable. Si te interesa recibir nuestras novedades suscribite a nuestro newsletter así establecemos lazos. Esperamos poder tender nuevas redes!</p>
         </div>
         <div class="Whatsapp" data-aos="zoom-out-up">
           <a href="https://api.whatsapp.com/send?phone=542615936269"><img src="./images/whatsapp.png" alt="Whatsapp"></a>
