--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -12,11 +12,11 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;1,100&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../sass/main.css">
 </head>
 <body>
-    <audio src="../music/saxophone.mp3" autoplay="autoplay" loop="loop"></audio>
+    <audio src="../music/positive-cartoon.mp3" autoplay="autoplay" loop="loop"></audio>
     <header>
         <div class="navBar2">
             <a class="Logo" href="../index.html"><img src="../images/tejido-de-punto.png"></a>
@@ -32,13 +32,14 @@
     </header>
     <main>
         <div class="Titulo3" data-aos="zoom-out-up">
-            <p>Escribinos, llamanos, lo que vos prefieras. Estamos para asesorarte y atender tus inquietudes. Recordá que somos fabricantes y podemos confeccionar a gusto y en exclusividad tu pedido. Nuevamente <strong>GRACIAS</strong> por visitarnos. Sigamos recorriendo juntos el mundo de lo delicado y tierno... y nunca dejemos de lado nuestros anhelos más <strong>SUAVECITOS</strong>.</p>
+            <h1><strong>¡GRACIAS POR VISITARNOS!</strong></h1>
+            <p>Escribinos, llamanos, lo que vos prefieras. Estamos para asesorarte y atender tus inquietudes. Recordá que somos fabricantes y podemos confeccionar a gusto y en exclusividad tu pedido. Sigamos recorriendo juntos el mundo de lo delicado y tierno... y nunca dejemos de lado nuestros anhelos más <strong>SUAVECITOS</strong>.</p>
         </div>
         <div class="Cafecito">
             <img src="../images/portada.jpg" alt="Cafe" class="img-thumbnail">
         </div>
         <div class="Contacto" data-aos="zoom-out-up">
-            <h2>Dejanos tus datos y nos pondremos en contacto</h2>
+            <h2><strong>Dejanos tus datos y nos pondremos en contacto</strong></h2>
             <form action="enviar.php" method="get">
             <fieldset>
                 <label for="multi"></label>    
