--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -12,11 +12,11 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;1,100&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../sass/main.css">
 </head>
 <body>
-    <audio src="../music/saxophone.mp3" autoplay="autoplay" loop="loop"></audio>
+    <audio src="../music/positive-cartoon.mp3" autoplay="autoplay" loop="loop"></audio>
     <header>
         <div class="navBar2">
             <a class="Logo" href="../index.html"><img src="../images/tejido-de-punto.png"></a>
@@ -40,20 +40,20 @@
             <p>¿Sabías qué saludable es aprender a tejer desde chicos? Uno de los beneficios más importantes en los niños es la notable mejora de las habilidades motoras, particularmente la psicomotricidad fina y por otro lado la coordinación óculo-mano. Ayuda a estar concentrado en el presente y tener su atención enfocada en no perder los puntos y entrelazar el hilo correctamente, es una actividad que con el tiempo se convierte en un reto personal. Enseña a los más pequeños a perseguir una meta, que es un aspecto fundamental en la vida, además demuestra que el camino para conseguir un objetivo puede ser una tarea entretenida y divertida. Es bueno para las matemáticas, mejora la creatividad... <strong>¡ENTRE MUCHAS OTRAS RAZONES MÁS!</strong></p>
         </div>
         <div class="Subtitulo">
-            <h2>LA IMPORTANCIA DEL TEJIDO EN NUESTRAS VIDAS</h2>
+            <h1>LA IMPORTANCIA DEL TEJIDO EN NUESTRAS VIDAS</h1>
             <h3>Mirá el siguiente video y conocé el fundamento de este título:</h3>
         </div>
         <div class="Video"  data-aos="zoom-out-up">
             <iframe width="663" height="373" src="https://www.youtube.com/embed/uJaCqGa_O7k" title="Beneficios del tejido en nuestra salud y bienestar" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
         <div class="Suscribite">
-            <h2>Suscribite a nuestro newsletter</h2>
+            <h2><strong>Suscribite a nuestro newsletter</strong></h2>
             <form action="enviar.php" method="get">
             <fieldset>
                 <legend>Datos Personales</legend>
-                <label for="Nombre">Nombre</label>
+                <label for="Nombre">Nombre:</label>
                 <input type="text" id="nombre" placeholder="Ingrese su nombre">
-                <label for="mail">Email</label>
+                <label for="mail">Email:</label>
                 <input type="email" id="mail" required>
                 <input type="submit" value="Suscribirse">
             </fieldset>
