--- a/pages/para-el-hogar.html
+++ b/pages/para-el-hogar.html
@@ -12,11 +12,11 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;1,100&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../sass/main.css">
 </head>
 <body>
-    <audio src="../music/saxophone.mp3" autoplay="autoplay" loop="loop"></audio>
+    <audio src="../music/positive-cartoon.mp3" autoplay="autoplay" loop="loop"></audio>
     <header>
         <div class="navBar2">
             <a class="Logo" href="../index.html"><img src="../images/tejido-de-punto.png"></a>
@@ -32,6 +32,7 @@
     </header>
     <main>
         <div class="Categorias" data-aos="zoom-out-up">
+            <h1><strong>¡QUE SE VEA SIEMPRE LINDA!</strong></h1>
             <p>Qué lindo es ver nuestra casa limpia, ordenada, pero sobretodo con esos pequeños detalles que hacen la diferencia.</p>
             <ul>
                 <li>Centros de mesa</li>
@@ -57,7 +58,11 @@
             <img src="../images/home-8.jpeg" class="img-thumbnail">
             <img src="../images/home-9.jpeg" class="img-thumbnail">
         </div>
-        <div class="Whatsapp" data-aos="zoom-out-up">
+        <div class="Central2" data-aos="zoom-out-up">
+            <p>Aparte de lana, otro fabuloso material que acompaña nuestros productos deco hogar es la arpillera. Se conoce como arpillera a la pieza textil gruesa y áspera fabricada con diversos tipos de estopa (de cáñamo o de yute) que suele utilizarse como elemento cobertor, y en la fabricación de sacos y piezas de embalaje. Mientras está siendo fabricada, se la sumerge en queroseno para apartar de la misma alimañas como los gusanos. El tejido de arpillera se usa también en la confección de ropa, tapicería y decoración. Sobre su superficie pueden realizarse trabajos de artesanía, bordados y pinturas. </p>
+            <img src="../images/arpillera.jpg" alt="Manos" class="img-thumbnail">
+        </div>    
+            <div class="Whatsapp" data-aos="zoom-out-up">
             <a href="https://api.whatsapp.com/send?phone=542615936269"><img src="../images/whatsapp.png" alt="Whatsapp"></a>
         </div>
     </main>
