--- a/pages/para-ninos.html
+++ b/pages/para-ninos.html
@@ -12,11 +12,11 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;1,100&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../sass/main.css">
 </head>
 <body>
-    <audio src="../music/saxophone.mp3" autoplay="autoplay" loop="loop"></audio>
+    <audio src="../music/positive-cartoon.mp3" autoplay="autoplay" loop="loop"></audio>
     <header>
         <div class="navBar2">
             <a class="Logo" href="../index.html"><img src="../images/tejido-de-punto.png"></a>
@@ -32,7 +32,8 @@
     </header>
     <main>
         <div class="Categorias" data-aos="zoom-out-up">
-            <p>Sabemos cuánto te gusta cuidarlos, abrigarlos, vestirlos bien; para eso nada mejor que un tejido de calidad y realizado correctamente. Cada prenda es única y exclusiva, confeccionada a medida.</p>
+            <h1><strong>¡PARA ELLOS, LO MEJOR!</strong></h1>
+            <p>Sabemos cuánto te gusta cuidarlos, abrigarlos, vestirlos bien; para eso nada mejor que un tejido de calidad y realizado correctamente. Cada prenda es única y exclusiva, confeccionada a medida:</p>
             <ul>
                 <li>Gorritos</li>
                 <li>Camperitas</li>
@@ -57,6 +58,10 @@
             <img src="../images/baby7.jpg" class="img-thumbnail">
             <img src="../images/baby8.jpg" class="img-thumbnail">
             <img src="../images/baby9.jpg" class="img-thumbnail">
+        </div>
+        <div class="Central2" data-aos="zoom-out-up">
+            <img src="../images/tejido.jpg" alt="Manos" class="img-thumbnail">
+            <p>¿Te preguntaste alguna vez QUÉ es la lana? Es una fibra natural que se obtiene de los ovinos (caprinos y, principalmente, ovejas) y de otros animales como llamas, alpacas, guanacos, vicuñas o conejos, mediante un proceso denominado esquila. Se utiliza en la industria textil para confeccionar productos tales como sacos, mantas, guantes, calcetines, suéteres, etc. Contiene lanolina y creatina, aceites naturales. La lana que integra nuestros productos es de primerísima calidad.</p>
         </div>
         <div class="Tabla"  data-aos="zoom-out-up">
             <H2>CURVA DE TALLES</H2>
