--- a/pages/para-ninos.html
+++ b/pages/para-ninos.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keyboards" content="tejido, lana, manufactura, niños, ropa, abrigo, vestimenta, peques">
     <meta name="description" content="Diseños exclusivos, a gusto tuyo, tejidos de lana, pensados para los más pequeños y para el hogar.">
-    <title>Ninos - Suavecitos Tejidos</title>
+    <title>Infantes - Suavecitos Tejidos</title>
     <link rel="shortcut icon" href="../images/tejido-de-punto.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
